# Rust-E-commerce-API-Client

./: .gitignore  Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  types.rs
